# NITMC_Study_ThreadDetection

./: CImageProcessor.cpp  CImageProcessor.hpp  CMakeLists.txt  CReadConfig.cpp  CReadConfig.hpp  CThreadDetector.cpp  CThreadDetector.hpp  CTimeMeasure.cpp  CTimeMeasure.hpp  DetectCamera.py  imageCapture.py  main.cpp  param.cfg
